<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.android.beatmeifyoucan.thumbWrestlingRules">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange"
        android:orientation="vertical">

        <LinearLayout
            style="@style/MyTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:orientation="horizontal"
            android:padding="@dimen/smallPadding">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:scaleType="fitXY"
                android:src="@drawable/game2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/layout_margin"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/game2"
                android:textColor="@color/black"
                android:textSize="@dimen/title"
                android:textStyle="bold" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/war" />

            <TextView
                android:id="@+id/titleRulesTW"
                style="@style/RulesTextViewStyle"
                android:background="#70BDBDBD"
                android:padding="@dimen/title"
                android:text="@string/Rules"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                style="@style/RulesTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleRulesTW"
                android:orientation="vertical">


                <TextView
                    style="@style/RulesTextViewStyle"
                    android:text="@string/Goal"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    style="@style/RulesTextViewStyle"
                    android:text="@string/GoalTW"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/RulesTextViewStyle"
                    android:text="@string/Win"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    style="@style/RulesTextViewStyle"
                    android:text="@string/WinTW"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/RulesTextViewStyle"
                    android:text="@string/Score"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    style="@style/RulesTextViewStyle"
                    android:text="@string/ScoreTW"
                    android:textColor="@color/black" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:weightSum="2">


            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>